hphp/test/slow/hhbbc/nullsafe_nullbase.php.expectf
Fatal error: You cannot decorate this argument as inout in %s/test/slow/hhbbc/nullsafe_nullbase.php on line 11
